--- a/src/main/webapp/vistas/personas/Crear.xhtml
+++ b/src/main/webapp/vistas/personas/Crear.xhtml
@@ -41,29 +41,29 @@
                                     <p:inputText id="domicilioOficina" value="#{personasController.selected.domicilioOficina}" title="#{bundle.PersonasTitle_domicilioOficina}" />
                                     
                                     <p:outputLabel value="#{bundle.PersonasLabel_curp}" for="curp" />
-                                    <p:inputText id="curp" value="#{personasController.selected.curp}" title="#{bundle.PersonasTitle_curp}" />
+                                    <p:inputText id="curp" value="#{personasController.selected.curp}" title="#{bundle.PersonasTitle_curp}" validatorMessage="#{bundle.PersonasValidatorMessage_curp}"/>
                                     <p:outputLabel value="#{bundle.PersonasLabel_telefono}" for="telefono" />
                                     <p:inputText id="telefono" value="#{personasController.selected.telefono}" title="#{bundle.PersonasTitle_telefono}" />
                                     <p:outputLabel value="#{bundle.PersonasLabel_grado}" for="grado" />
                                     <p:inputText id="grado" value="#{personasController.selected.grado}" title="#{bundle.PersonasTitle_grado}" />
                                     <p:outputLabel value="#{bundle.PersonasLabel_correo1}" for="correo1" />
-                                    <p:inputText id="correo1" value="#{personasController.selected.correo1}" title="#{bundle.PersonasTitle_correo1}" validatorMessage="Correo invalido"/>                                                                          
+                                    <p:inputText id="correo1" value="#{personasController.selected.correo1}" title="#{bundle.PersonasTitle_correo1}" required="true" requiredMessage="#{bundle.PersonasRequiredMessage_correo1}" validatorMessage="#{bundle.PersonasValidatorMessage_correo1}"/>                                                                          
                                     <p:outputLabel value="#{bundle.PersonasLabel_nombre}" for="nombre" />
-                                    <p:inputText id="nombre" value="#{personasController.selected.nombre}" title="#{bundle.PersonasTitle_nombre}" required="true" requiredMessage="#{bundle.PersonasRequiredMessage_nombre}"/>
+                                    <p:inputText id="nombre" value="#{personasController.selected.nombre}" title="#{bundle.PersonasTitle_nombre}" required="true" requiredMessage="#{bundle.PersonasRequiredMessage_nombre}" validatorMessage="#{bundle.PersonasValidatorMessage_nombre}"/>
                                     <p:outputLabel value="#{bundle.PersonasLabel_correo2}" for="correo2" />
-                                    <p:inputText id="correo2" value="#{personasController.selected.correo2}" title="#{bundle.PersonasTitle_correo2}" />
+                                    <p:inputText id="correo2" value="#{personasController.selected.correo2}" title="#{bundle.PersonasTitle_correo2}" validatorMessage="#{bundle.PersonasValidatorMessage_correo2}"/>
                                     <p:outputLabel value="#{bundle.PersonasLabel_apellidop}" for="apellidop" />
-                                    <p:inputText id="apellidop" value="#{personasController.selected.apellidop}" title="#{bundle.PersonasTitle_apellidop}" />
+                                    <p:inputText id="apellidop" value="#{personasController.selected.apellidop}" title="#{bundle.PersonasTitle_apellidop}" required="true" requiredMessage="#{bundle.PersonasRequiredMessage_apellidop}" validatorMessage="#{bundle.PersonasValidatorMessage_apellidop}" />
                                     <p:outputLabel value="#{bundle.PersonasLabel_dompersonal}" for="dompersonal" />
                                     <p:inputText id="dompersonal" value="#{personasController.selected.dompersonal}" title="#{bundle.PersonasTitle_dompersonal}" />
                                     <p:outputLabel value="#{bundle.PersonasLabel_apellidom}" for="apellidom" />
-                                    <p:inputText id="apellidom" value="#{personasController.selected.apellidom}" title="#{bundle.PersonasTitle_apellidom}" />
+                                    <p:inputText id="apellidom" value="#{personasController.selected.apellidom}" title="#{bundle.PersonasTitle_apellidom}" validatorMessage="#{bundle.PersonasValidatorMessage_apellidom}" />
                                     <p:outputLabel value="#{bundle.PersonasLabel_telpersonal}" for="telpersonal" />
                                     <p:inputText id="telpersonal" value="#{personasController.selected.telpersonal}" title="#{bundle.PersonasTitle_telpersonal}" />
                                     <p:outputLabel value="#{bundle.PersonasLabel_cargo}" for="cargo" />
                                     <p:inputText id="cargo" value="#{personasController.selected.cargo}" title="#{bundle.PersonasTitle_cargo}" />
                                     <p:outputLabel value="#{bundle.PersonasLabel_correo3}" for="correo3" />
-                                    <p:inputText id="correo3" value="#{personasController.selected.correo3}" title="#{bundle.PersonasTitle_correo3}" />
+                                    <p:inputText id="correo3" value="#{personasController.selected.correo3}" title="#{bundle.PersonasTitle_correo3}" validatorMessage="#{bundle.PersonasValidatorMessage_correo3}" />
                            </p:panelGrid>
                         </p:panel>
                         <p:commandButton value="#{bundle.Cancel}" actionListener="#{personasController.reset}"  oncomplete="PF('wizCrearPersonas').loadStep('tabInstitucion',true);PF('PersonasCreateDialog').hide();" />
